# TEG-framework

./: .gitignore
latex/: dissertation.sty  main.tex  rpd.bib
latex/introduction/: challenges_goals.tex  context.tex  document_structure.tex  introduction.tex
latex/preliminary_work/: preliminary_work.tex
latex/state_of_the_art/: state_of_the_art.tex
latex/title/: title.tex
latex/work_plan/: work_plan.tex
latex/work_so_far/: work_so_far.tex
meetings/16_11_2019/: bib.org
meetings/24_10_2019/: DAGuE.org  bib.org  raftlib.org  streambox.org
src/analysis/: Comparison_analysis.ipynb  async_analysis.ipynb  benchmark.py  parallel_speculative_iter_analysis.ipynb  parallel_speculative_par_iter_analysis.ipynb  sequential_analysis.ipynb  sequential_par_iter_analysis.ipynb  speculative_analysis.ipynb  tokio_analysis.ipynb  tokio_seq_analysis.ipynb  top_comparison_analysis.ipynb
src/analysis/sequential_cpp/: bench.csv
src/analysis/taskflow/: bench.csv
src/creator/: generator.py
src/live/: README.md  mix.exs
src/live/assets/: package-lock.json
src/live/config/: config.exs  dev.exs  prod.exs  prod.secret.exs  test.exs
src/live/lib/: live_web.ex
src/looking_glass/: .gitignore  README.md  \  docker-compose.yml  mix.exs  package-lock.json  package.json
src/looking_glass/assets/: package-lock.json  package.json
src/looking_glass/config/: config.exs  dev.exs  prod.exs  prod.secret.exs  test.exs
src/looking_glass/lib/: looking_glass.ex  looking_glass_web.ex
src/parser/: asdf  cena.cpp  funcdef.dic  parser.py  pyc.py  teg.h  teg.json
src/rust_scheduler/: Cargo.toml  io_run5  io_run6  io_run7  io_run8  run.sh  run1  run3  run4  run5  run7  run8  submit.sh
src/rust_scheduler/benches/: async.rs  native_schedulers.rs  parallel_speculative_iter.rs  parallel_speculative_par_iter.rs  sequential_for_loop.rs  sequential_iter.rs  sequential_par_iter.rs  speculative.rs  tokio_sequential.rs  tokyo.rs
src/rust_scheduler/benches/io/: parallel_speculative_iter.rs  parallel_speculative_par_iter.rs  sequential_iter.rs  sequential_par_iter.rs  speculative.rs  std_async.rs  tokio.rs
src/rust_scheduler/src/: lib.rs
src/rust_scheduler/src/deque_speculative/: mod.rs  sequential.rs
src/rust_scheduler/src/native/: async.rs  data.rs  mod.rs  pipeline_async.rs  pipeline_tokio.rs  scheduler.rs  tokio.rs
src/rust_scheduler/src/parallel_async_scheduler/: async.rs  data.rs  scheduler.rs  tokio.rs
src/rust_scheduler/src/parallel_speculative/: data.rs  io_slave.rs  io_utils.rs  master.rs  mod.rs  parallel_speculative.rs  pipeline.rs  scheduler.rs  slave.rs  utils.rs
src/rust_scheduler/src/sequential/: io_scheduler.rs  mod.rs  scheduler.rs  sequential.rs
src/rust_scheduler/src/speculative/: master.rs  mod.rs  scheduler.rs  speculative.rs
src/rust_scheduler_variable_pipeline/: Cargo.toml  io_run1  io_run2  io_run3  io_run4  pipeline_parallel_speculative_iter  pipeline_parallel_speculative_par_iter  pipeline_sequential_for_loop  pipeline_sequential_iter  pipeline_sequential_par_iter  pipeline_speculative  run2  run6
src/rust_scheduler_variable_pipeline/benches/: native_schedulers.rs  parallel_speculative_iter.rs  sequential_iter.rs  sequential_par_iter.rs  speculative.rs  tokio_sequential.rs
src/rust_scheduler_variable_pipeline/benches/io/: sequential_for_loop.rs
src/rust_scheduler_variable_pipeline/benches/pipelines/: parallel_speculative_iter.rs  parallel_speculative_par_iter.rs  sequential_for_loop.rs  sequential_iter.rs  sequential_par_iter.rs  speculative.rs
src/rust_scheduler_variable_pipeline/src/: async_cpu_pipeline_10.rs  async_cpu_pipeline_20.rs  async_io_pipeline_10.rs  async_io_pipeline_20.rs  cpu_pipeline_10.rs  cpu_pipeline_20.rs  io_pipeline_10.rs  io_pipeline_20.rs  lib.rs
src/rust_scheduler_variable_pipeline/src/native/: async.rs  tokio.rs
src/rust_scheduler_variable_pipeline/src/parallel_speculative/: io_pipeline.rs  io_scheduler.rs  master.rs  mod.rs  parallel_speculative.rs  scheduler.rs  slave.rs
src/rust_scheduler_variable_pipeline/src/sequential/: data.rs  io_scheduler.rs  scheduler.rs  sequential.rs
src/rust_scheduler_variable_pipeline/src/speculative/: io_pipeline.rs  io_slave.rs  io_utils.rs  master.rs  pipeline.rs  scheduler.rs  slave.rs  speculative.rs  utils.rs
src/scheduler/: .clang-tidy  .gitignore  CMakeLists.txt  compile_commands.json  perf.data  run.py  run.sh
src/scheduler/cmake/: clang_tools.cmake
src/scheduler/include/: data.hpp  filter.hpp  logger.hpp  pipeline.hpp  scheduler.hpp  teg.h  teg_dependency.hpp  teg_fn.hpp  vector.hpp
src/scheduler/include/async_dependency_scheduler/: cache.hpp  data_map.hpp  data_queue.hpp  deps.hpp  mapping_queue_data.hpp  master.hpp  multiqueue.hpp  slave.hpp  util.hpp
src/scheduler/include/async_dependency_scheduler/multiqueue/: mapping_queue_data.hpp
src/scheduler/include/async_dependency_scheduler/unused/: data_map.hpp  master.hpp  multiqueue.hpp  slave.hpp  util.hpp
src/scheduler/include/dependency_scheduler/: master.hpp  master_try.hpp  slave.hpp  util.hpp
src/scheduler/include/dependency_scheduler_improved/: master.hpp  slave.hpp  util.hpp
src/scheduler/include/imp_async_dependency_scheduler/: master.hpp  multiqueue.hpp  slave.hpp
src/scheduler/include/imp_async_dependency_scheduler/master/: cache.hpp  deps.hpp
src/scheduler/include/imp_async_dependency_scheduler/multiqueue/: data_queue.hpp  mapping_queue_data.hpp
src/scheduler/include/scheduler/: master.hpp  queue.hpp  slave.hpp
src/scheduler/src/: Application.cpp  Data.cpp  Data.hpp  Filters.cpp  Filters.hpp  data.cpp  main.cpp  pipeline.cpp  scheduler.cpp  teg_fn.cpp
src/scheduler/src/scheduler/: master.cpp  master_try.cpp  slave.cpp
src/scheduler2/: CMakeLists.txt
src/scheduler2/src/: Application.cpp  (+3 more)
src/scheduler_try/: todo.json
src/scripts/: 2020-05-10_23:27.csv  run.sh  testing.py
src/sequential_cpp/: data.cpp  data.hpp  main  main.cpp  run.sh  teg.h
src/taskflow/: data.cpp  data.hpp  main.cpp  teg.h
src/validator/: solver.py  topo.py  validator.py
src/zmq_test/: CMakeLists.txt  main.cpp
(+10681 files in other folders)
